fixed widths except for overflow on sticker

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 .frame {
-  height: 50vw;
+  height: 42.5vw;
 
   /* For children... */
   display: flex;
@@ -7,7 +7,6 @@
   justify-content: center;
 
   flex-direction: column;
-  /* flex-shrink: 0; */
 
   padding: 10vw;
   background-color: lightgrey;
@@ -40,7 +39,7 @@ nav {
 }
 
 .frame img {
-  /* margin: 0; */
+  max-height: 100%;
 }
 
 .punch img {
@@ -51,7 +50,6 @@ nav {
 /* Stickers  */
 .new {
   /* position: relative; */
-  /* overflow: hidden; */
 }
 .new:after {
   background-image: url('../assets/images/ephemera/sticker.png');
@@ -68,7 +66,7 @@ nav {
 
   top: 0;
   right: 0;
-  transform: rotateZ(30deg) translate(20px, -30px);
+  transform: rotateZ(30deg) translate(10px, -30px);
 }
 
 
@@ -99,7 +97,7 @@ nav {
 img,
 video {
   max-width: 100%;
-  max-height: 100%;
+  /* max-height: 100%; */
 }
 
 video {
@@ -113,12 +111,11 @@ body {
   color: rgba(60, 60, 60, 1);
   font-family: "CenturySchoolbook", Georgia, serif;
 
-  margin: 0;
-  padding: 2em;
+  margin: 5vw;
 
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-gap: 2em;
+  grid-gap: 5vw;
 }
 
 /* Navigation  */
@@ -356,4 +353,10 @@ section {
 @keyframes fadein {
   from { opacity: 0; }
   to { opacity: 1; }
+}
+
+@media (max-width: 694px) {
+  .full {
+    height: 90vw;
+  }
 }
